--- a/io.github.bugadinho.Corky.yaml
+++ b/io.github.bugadinho.Corky.yaml
@@ -64,9 +64,9 @@ modules:
       - mv -v /app/share/applications/roblox-player.desktop /app/share/applications/${FLATPAK_ID}.robloxplayer.desktop
       - mv -v /app/share/applications/roblox-studio.desktop /app/share/applications/${FLATPAK_ID}.robloxstudio.desktop
       - desktop-file-edit /app/share/applications/${FLATPAK_ID}.robloxplayer.desktop
-        --set-icon=${FLATPAK_ID}.robloxplayer
+        --set-icon=${FLATPAK_ID}.robloxplayer --set-key=StartupWMClass --set-value='steam_app_robloxplayer'
       - desktop-file-edit /app/share/applications/${FLATPAK_ID}.robloxstudio.desktop
-        --set-icon=${FLATPAK_ID}.robloxstudio
+        --set-icon=${FLATPAK_ID}.robloxstudio --set-key=StartupWMClass --set-value='steam_app_robloxstudio'
       - cp -v /app/share/icons/hicolor/scalable/apps/cork.svg -T /app/share/icons/hicolor/scalable/apps/${FLATPAK_ID}.svg
       - cp -v /app/share/icons/hicolor/scalable/apps/roblox-player.svg -T /app/share/icons/hicolor/scalable/apps/${FLATPAK_ID}.robloxplayer.svg
       - cp -v /app/share/icons/hicolor/scalable/apps/roblox-studio.svg -T /app/share/icons/hicolor/scalable/apps/${FLATPAK_ID}.robloxstudio.svg
