--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -20,6 +20,7 @@ jobs:
           sudo apt install flatpak-builder
           flatpak remote-add --user --if-not-exists \
                   flathub https://flathub.org/repo/flathub.flatpakrepo
+          flatpak install --user -y flathub org.freedesktop.Platform/x86_64/22.08
           flatpak install --user -y flathub org.freedesktop.Sdk/x86_64/22.08
       
       - name: Build Package
