Let's update first

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Dependencies
         run: |
+          sudo apt update
+          sudo apt upgrade
           sudo apt install flatpak-builder
           flatpak remote-add --user --if-not-exists \
                   flathub https://flathub.org/repo/flathub.flatpakrepo
