--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,7 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
+        with:
+          submodules: recursive
+      
       - name: Dependencies
         run: |
           sudo apt update
