--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "shared-modules"]
 	path = shared-modules
 	url = https://github.com/flathub/shared-modules.git
+[submodule "Plugins"]
+	path = Plugins
+	url = https://github.com/CorkHQ/Plugins.git
