--- a/io.github.CorkHQ.Corky.yaml
+++ b/io.github.CorkHQ.Corky.yaml
@@ -134,6 +134,23 @@ modules:
             x-checker-data:
               type: git
               tag-pattern: ^sdk-([\d.]+)$
+  
+  - name: libdrm
+        buildsystem: meson
+        config-opts:
+          - -Dintel=disabled
+          - -Dradeon=disabled
+          - -Damdgpu=enabled
+          - -Dnouveau=disabled
+          - -Dvmwgfx=disabled
+          - -Dcairo-tests=disabled
+          - -Dtests=false
+          - --default-library=static
+        sources:
+          - type: git
+            url: https://gitlab.freedesktop.org/mesa/drm.git
+            commit: 02a41cf302a69f0cd94aae96ec01d98b9398076e
+            tag: libdrm-2.4.118
 
   - name: wine
     build-options:
@@ -151,6 +168,7 @@ modules:
       - --with-x
       - --with-pulse
       - --with-dbus
+      - --without-hal
       - --without-oss
     make-install-args:
       - LDCONFIG=/bin/true
