Switch back to Valve Wine

--- a/io.github.CorkHQ.Corky.yaml
+++ b/io.github.CorkHQ.Corky.yaml
@@ -151,7 +151,6 @@ modules:
       - --with-x
       - --with-pulse
       - --with-dbus
-      - --without-hal
       - --without-oss
     make-install-args:
       - LDCONFIG=/bin/true
@@ -159,11 +158,20 @@ modules:
       - INSTALL_PROGRAM_FLAGS=-s
     sources:
       - type: git
-        url: https://github.com/GloriousEggroll/proton-wine.git
-        commit: 3061bb04122124447acc0ab2a569128414d041cb
+        url: https://github.com/ValveSoftware/wine.git
+        commit: 66cd5c1c1f1cae4c76e74c5e82d7b4f1fa4d7550
       - type: patch
         paths:
           - loader-prefer-winedllpath.patch
+            - type: shell
+        dest: wine
+        commands:
+          - autoreconf -fiv
+      - type: shell
+        dest: wine
+        commands:
+          - tools/make_requests
+          - dlls/winevulkan/make_vulkan --verbose --xml vk.xml
 
   - name: wine64to32
     buildsystem: simple
