--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -22,6 +22,7 @@ jobs:
           sudo apt update
           sudo apt upgrade
           sudo apt install flatpak-builder
+          git config --global protocol.file.allow always
           flatpak remote-add --user --if-not-exists \
                   flathub https://flathub.org/repo/flathub.flatpakrepo
           flatpak install --user -y flathub org.freedesktop.Platform/x86_64/23.08
